Added 'Inverted' profile
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>